framework/build_errors.txt
warning: peak-ui@0.1.0: Loading environment from: ../.env.local
    Checking peak-ui v0.1.0 (/Users/vegarberentsen/Documents/PeakSuite/PeakUI/framework)
error[E0277]: the trait bound `LanguageIdentifier: serde::Serialize` is not satisfied
    --> framework/src/engine/localization.rs:7:17
     |
   7 | #[derive(Clone, serde::Serialize, serde::Deserialize)]
     |                 ^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `LanguageIdentifier`
   8 | pub struct Localization {
   9 |     pub language: LanguageIdentifier,
     |     --- required by a bound introduced by this call
     |
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `LanguageIdentifier` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 270 others
note: required by a bound in `backend::_::_serde::ser::SerializeStruct::serialize_field`
    --> /Users/vegarberentsen/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/ser/mod.rs:1917:21
     |
1915 |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
     |        --------------- required by a bound in this associated function
1916 |     where
1917 |         T: ?Sized + Serialize;
     |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
     = note: this error originates in the derive macro `serde::Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `LanguageIdentifier: serde::Deserialize<'de>` is not satisfied
    --> framework/src/engine/localization.rs:9:19
     |
   9 |     pub language: LanguageIdentifier,
     |                   ^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `LanguageIdentifier`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `LanguageIdentifier` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
               `(T0, T1)` implements `Deserialize<'de>`
               `(T0, T1, T2)` implements `Deserialize<'de>`
               `(T0, T1, T2, T3)` implements `Deserialize<'de>`
             and 277 others
note: required by a bound in `next_element`
    --> /Users/vegarberentsen/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1771:12
     |
1769 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1770 |     where
1771 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `LanguageIdentifier: serde::Deserialize<'de>` is not satisfied
    --> framework/src/engine/localization.rs:9:19
     |
   9 |     pub language: LanguageIdentifier,
     |                   ^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `LanguageIdentifier`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `LanguageIdentifier` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
               `(T0, T1)` implements `Deserialize<'de>`
               `(T0, T1, T2)` implements `Deserialize<'de>`
               `(T0, T1, T2, T3)` implements `Deserialize<'de>`
             and 277 others
note: required by a bound in `next_value`
    --> /Users/vegarberentsen/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1916:12
     |
1914 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1915 |     where
1916 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

error[E0277]: the trait bound `LanguageIdentifier: serde::Deserialize<'de>` is not satisfied
  --> framework/src/engine/localization.rs:7:35
   |
 7 | #[derive(Clone, serde::Serialize, serde::Deserialize)]
   |                                   ^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `LanguageIdentifier`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `LanguageIdentifier` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             `&'a [u8]` implements `Deserialize<'de>`
             `&'a std::path::Path` implements `Deserialize<'de>`
             `&'a str` implements `Deserialize<'de>`
             `()` implements `Deserialize<'de>`
             `(T,)` implements `Deserialize<'de>`
             `(T0, T1)` implements `Deserialize<'de>`
             `(T0, T1, T2)` implements `Deserialize<'de>`
             `(T0, T1, T2, T3)` implements `Deserialize<'de>`
           and 277 others
note: required by a bound in `backend::_::_serde::__private228::de::missing_field`
  --> /Users/vegarberentsen/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde-1.0.228/src/private/de.rs:26:8
   |
24 | pub fn missing_field<'de, V, E>(field: &'static str) -> Result<V, E>
   |        ------------- required by a bound in this function
25 | where
26 |     V: Deserialize<'de>,
   |        ^^^^^^^^^^^^^^^^ required by this bound in `missing_field`
   = note: this error originates in the derive macro `serde::Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: peak-ui@0.1.0: Loading environment from: ../.env.local
error: could not compile `peak-ui` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
warning: peak-ui@0.1.0: Loading environment from: ../.env.local
error: could not compile `peak-ui` (lib test) due to 4 previous errors
